# django-hostmap

./: CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md  troubleshooting.md
docs/explanation/: how-host-aware-reversing-works.md  resolution-order.md
docs/how-to/: add-a-redirect-host.md  link-across-hosts-in-templates-and-python.md  migrate-from-django-hosts.md  reverse-out-of-a-request.md  route-a-subdomain-to-its-own-urlconf.md  run-behind-a-proxy.md  test-host-routing.md  turn-off-reversing.md  use-wildcard-subdomains.md
docs/reference/: api.md  settings.md
docs/tutorial/: multi-host-in-ten-minutes.md
src/hostmap/: CONTEXT.md  __init__.py  apps.py  checks.py  conf.py  context.py  map.py  middleware.py  resolvers.py  urls.py
src/hostmap/management/commands/: hostmap.py
src/hostmap/testing/: __init__.py  fixtures.py  helpers.py
tests/: conftest.py  settings.py  test_checks.py  test_command.py  test_comparison.py  test_concurrency.py  test_edge_cases.py  test_empty_map.py  test_explicit_api.py  test_patch_off.py  test_redirects.py  test_routing.py  test_testing_helpers.py  urls_api.py  urls_i18n.py  urls_tenant.py  urls_www.py
tests/thirdparty_app/: __init__.py
